added basic dockerfile and compose files

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-SCANNER_URL = ""
-PAPERLESS_URL = ""
+SCANNER_HOST = ""
+PAPERLESS_HOST = ""
 
 SCANNER_BASIC_AUTH = "username:password"
 PAPERLESS_API_TOKEN = ""
