--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,3 +4,7 @@ backgroundColor="#0E1117"
 secondaryBackgroundColor="#31333F"
 textColor="#FAFAFA"
 font="sans serif"
+
+
+[browser]
+gatherUsageStats = false
