exposed port in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,5 @@ services:
       - PAPERLESS_API_TOKEN=${PAPERLESS_API_TOKEN}
       - SCANNER_HOST=${SCANNER_HOST}
       - SCANNER_BASIC_AUTH=${SCANNER_BASIC_AUTH}
+    ports:
+      - "8501:8501"
