added dummy env vars to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,9 @@ jobs:
 
     - name: Run tests
       run: poetry run pytest tests/
+      env:
+        SCANNER_HOST = ""
+        PAPERLESS_HOST = ""
+
+        SCANNER_BASIC_AUTH = "username:password"
+        PAPERLESS_API_TOKEN = ""
